--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vite-poc",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -15,8 +16,11 @@
   "devDependencies": {
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
     "@vitejs/plugin-react": "2.1.0",
-    "typescript": "4.6.4",
+    "eslint": "8.25.0",
+    "typescript": "4.8.4",
     "vite": "3.1.0"
   }
 }
