--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@cabify/eslint-config": "1.1.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.25.0",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.1.0"
   }
