--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.1.0"
+  },
+  "volta": {
+    "node": "16.17.1",
+    "yarn": "1.22.19"
   }
 }
