--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "test": "vitest",
     "lint": "eslint .",
     "dev": "vite",
     "build": "tsc && vite build",
@@ -24,7 +25,8 @@
     "eslint-import-resolver-typescript": "3.5.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
-    "vite": "3.1.0"
+    "vite": "3.1.0",
+    "vitest": "0.24.0"
   },
   "volta": {
     "node": "16.17.1",
