--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@cabify/eslint-config": "1.1.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.39.0",
@@ -23,6 +25,7 @@
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.25.0",
     "eslint-import-resolver-typescript": "3.5.1",
+    "jsdom": "20.0.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.1.0",
