--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["vite.config.ts", "vitest.config.ts", "vitest.config.ts", "src/**/*", "test/**/*"]
+  "include": ["vite.config.ts", "vitest.config.ts", "src/**/*", "tests/**/*"]
 }
