--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.1.0",
+    "vite-plugin-eslint": "1.8.1",
     "vitest": "0.24.0"
   },
   "volta": {
