--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.25.0",
     "eslint-import-resolver-typescript": "3.5.1",
     "jsdom": "20.0.1",
+    "msw": "0.47.4",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.1.0",
@@ -36,5 +37,8 @@
   "volta": {
     "node": "16.17.1",
     "yarn": "1.22.19"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
