--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
     "@vitejs/plugin-react": "2.1.0",
+    "cross-fetch": "3.1.5",
     "eslint": "8.25.0",
     "eslint-import-resolver-typescript": "3.5.1",
     "jsdom": "20.0.1",
