--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
+    "@vitejs/plugin-legacy": "2.2.0",
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.25.0",
     "eslint-import-resolver-typescript": "3.5.1",
@@ -33,6 +34,7 @@
     "jsdom": "20.0.1",
     "msw": "0.47.4",
     "prettier": "2.7.1",
+    "terser": "5.15.1",
     "typescript": "4.8.4",
     "vite": "3.1.0",
     "vite-plugin-eslint": "1.8.1",
