--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cabify/eslint-config": "1.1.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/isomorphic-fetch": "0.0.36",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
