--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "paths": {
       "@config": ["./config"],
       "@api": ["./src/services/api/index.ts"],
-      "@apiEntities": ["./src/services/api/entities.ts"]
+      "@apiEntities": ["./src/services/api/entities.ts"],
+      "@tests-utils": ["./tests/utils.tsx"]
     }
   },
   "include": ["src", "./tests/setup.ts"],
