--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "1.8.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "3.1.4",
     "react-redux": "8.0.4"
   },
   "devDependencies": {
