--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,8 +4,7 @@
     ".eslintrc.cjs",
     "vite.config.ts",
     "vitest.config.ts",
-    "src/**/*",
+    "./src/**/*",
     "tests/**/*",
-    "src/"
   ]
 }
