--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@tests/utils": ["./tests/utils.tsx"]
     }
   },
-  "include": ["src", "./tests/setup.ts"],
+  "include": ["src/", "./tests/setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
