--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
-    "react-redux": "8.0.4"
+    "react-redux": "8.0.4",
+    "react-router-dom": "6.4.2"
   },
   "devDependencies": {
     "@cabify/eslint-config": "1.1.1",
