--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
+    "test:once": "vitest run",
     "typecheck": "tsc",
     "lint": "eslint .",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8.6",
@@ -42,7 +44,8 @@
     "typescript": "4.8.4",
     "vite": "3.1.0",
     "vite-plugin-eslint": "1.8.1",
-    "vitest": "0.24.0"
+    "vitest": "0.24.0",
+    "husky": "8.0.0"
   },
   "volta": {
     "node": "16.17.1",
