--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8.6",
@@ -23,7 +25,15 @@
     "react-router-dom": "6.4.2"
   },
   "devDependencies": {
+    "@babel/core": "7.19.6",
     "@cabify/eslint-config": "1.1.1",
+    "@storybook/addon-actions": "6.5.13",
+    "@storybook/addon-essentials": "6.5.13",
+    "@storybook/addon-interactions": "6.5.13",
+    "@storybook/addon-links": "6.5.13",
+    "@storybook/builder-vite": "0.2.5",
+    "@storybook/react": "6.5.13",
+    "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -34,8 +44,11 @@
     "@typescript-eslint/parser": "5.39.0",
     "@vitejs/plugin-legacy": "2.2.0",
     "@vitejs/plugin-react": "2.1.0",
+    "babel-loader": "8.2.5",
     "eslint": "8.25.0",
     "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-plugin-storybook": "0.6.6",
+    "husky": "8.0.0",
     "isomorphic-fetch": "3.0.0",
     "jsdom": "20.0.1",
     "msw": "0.47.4",
@@ -45,8 +58,7 @@
     "typescript": "4.8.4",
     "vite": "3.1.0",
     "vite-plugin-eslint": "1.8.1",
-    "vitest": "0.24.0",
-    "husky": "8.0.0"
+    "vitest": "0.24.0"
   },
   "volta": {
     "node": "16.17.1",
