--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
+    "sb": "yarn storybook",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
